# IPASCMultiCentreStudy

./: .gitignore  20250519_ipasc_multicentre_ipasc.xlsx  README.md  apply_analysis.ipynb  backprojection.json  image_registration.ipynb  pyproject.toml  registering.py  requirements.txt  scandetails.ods  utils.py
intermediate_results/: 20231117_ipasc_multicentre_ipasc.xlsx  translated_masks.npz
patato_recon/: backprojection_2.json
