[project]
name = "ipascmulticentre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jax>=0.6.0",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "patato>=0.6.1",
    "pint>=0.25",
    "scienceplots>=2.1.1",
    "seaborn>=0.13.2",
    "simpleitk>=2.5.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.7",
]
